2009-08-09  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: assumed that request parameters is Hash
	object, not Rack::Request object.

	* lib/gluon/controller.rb: inheritance of gluon path-filter.

	* lib/gluon/controller.rb: memoization for class method.

	* lib/gluon/controller.rb: syntax sugar of negative condition for
	gluon-cond.

	* lib/gluon/rs.rb: reference to controller.

	* run/lib/Example.rb: new example.

2009-08-08  TOKI Yoshinori  <toki@freedom.ne.jp>

	* bin/gluon_local: utility for project local RubyGems environemnt.

	* lib/gluon/controller.rb: easy memoization.

2009-08-07  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/application.rb, run/lib/Welcom.rb: page-encoding is
	set to charset of content-type.

	* lib/gluon/application.rb, lib/gluon/builder.rb,
	lib/gluon/template.rb, run/config.rb, run/config.ru,
	run/view/Welcom.erb: application builder and minimum example.

2009-08-04  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/erbview.rb, lib/gluon/template.rb: default template
	search.

2009-08-03  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/rs.rb: script_name -> root_script_name.

2009-08-02  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: gluon metainfo.
	action export.

	* lib/gluon.rb, lib/gluon/controller.rb, lib/gluon/erbview.rb,
	lib/gluon/po.rb, lib/gluon/rs.rb, lib/gluon/template.rb: gluon
	presentation method and template engine and erb view.

2009-07-26  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: view methods are defined at component
	class method.

	* lib/gluon/controller.rb: controller syntax is defined at
	component.

	* lib/gluon/controller.rb, lib/gluon/rs.rb: request-response
	context and controller hooks.

2009-07-21  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/cmap.rb: class-URL mapping.

2009-07-15  TOKI Yoshinori  <toki@freedom.ne.jp>

	* lib/gluon/controller.rb: controller action.
	component controller.
